<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="#ECEFF1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the_quiz"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"/>

    <Button
        android:id="@+id/buttonStartQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz"
        android:layout_marginTop="20dp"
        android:backgroundTint="#4CAF50"
        android:textColor="#FFFFFF"/>
</LinearLayout>
